test/library/standard/Random/RandomStreamInterface/choiceTestLowbounded.good
$CHPL_HOME/modules/standard/Random.chpl:nnnn: In method 'choice':
$CHPL_HOME/modules/standard/Random.chpl:nnnn: error: one of domain's dimensions is not a bounded range
  choiceTestLowbounded.chpl:12: called as (randomStream(int(64))).choice(x: range(int(64),low,one), size: nothing, replace: bool, prob: nothing)
